[AIM] Fix Lens icon not aligning properly in RTL.
See bug for screenshots.

Bug: 452650707
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7069839
Auto-Submit: Juan Mojica <juanmojica@google.com>
Commit-Queue: Nihar Majmudar <niharm@google.com>
Cr-Commit-Position: refs/heads/main@{#1533336}

--- a/ui/webui/resources/cr_components/composebox/composebox.css
+++ b/ui/webui/resources/cr_components/composebox/composebox.css
@@ -359,7 +359,7 @@
   display: none;
   opacity: 1;
   position: absolute;
-  right: 16px;
+  inset-inline-end: 16px;
   top: 6px;
 }
 
@@ -371,17 +371,12 @@
 
 :host([expanded_]) #lensIcon {
   animation: fade-out-in var(--lens-icon-animation-duration) linear;
-  right: 68px;
+  inset-inline-end: 68px;
   top: auto;
 }
 
 :host([lens-button-disabled_]) #lensIcon {
   opacity: 0.3;
-}
-
-:host-context([dir='rtl']) #lensIcon {
-  left: 68px;
-  right: unset;
 }
 
 :host(:not([show-submit_])) #submitContainer,
